--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Mahesh Govindu Portfolio</title>
 </head>
 <body>
-    https://maheshgovindu85.github.io/portfolio.github.io/index.html
+    Hello
 </body>
 </html>
