--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="preloader-inner position-relative">
                 <div class="preloader-circle"></div>
                 <div class="preloader-img pere-text">
-                    <img src="assets/img/logo/logo.png" alt="">
+                    <h2>Mahesh Govindu</h2>
                 </div>
             </div>
         </div>
@@ -56,16 +56,6 @@
                                 <nav>
                                     <ul id="navigation">    
                                         <li class="active"><a href="index.html"> Home</a></li>
-                                        <li><a href="feature.html">Feature</a></li>
-                                        <li><a href="services.html">Services</a></li>
-                                        <li><a href="pricing.html">Pricing</a></li>
-                                        <li><a href="#">Pages</a>
-                                            <ul class="submenu">
-                                                <li><a href="blog.html">Blog</a></li>
-                                                <li><a href="single-blog.html">Blog Details</a></li>
-                                                <li><a href="elements.html">Element</a></li>
-                                            </ul>
-                                        </li>
                                         <li><a href="contact.html">Contact</a></li>
                                     </ul>
                                 </nav>
@@ -92,17 +82,14 @@
                         <div class="row d-flex align-items-center">
                             <div class="col-lg-6 col-md-9 ">
                                 <div class="hero__caption">
-                                    <span data-animation="fadeInUp" data-delay=".4s">App Landing Page</span>
-                                    <h1 data-animation="fadeInUp" data-delay=".6s">Get things done<br>with Appco</h1>
-                                    <p data-animation="fadeInUp" data-delay=".8s">Dorem ipsum dolor sitamet, consectetur adipiscing elit, sed do eiusm tempor incididunt ulabore et dolore magna aliqua.</p>
-                                    <!-- Slider btn -->
-                                   <div class="slider-btns">
-                                        <!-- Hero-btn -->
-                                        <a data-animation="fadeInLeft" data-delay="1.0s" href="industries.html" class="btn radius-btn">Download</a>
-                                        <!-- Video Btn -->
-                                        <a data-animation="fadeInRight" data-delay="1.0s" class="popup-video video-btn ani-btn" href="https://www.youtube.com/watch?v=1aP-TXUpNoU"><i class="fas fa-play"></i></a>
-                                   </div>
-                                </div>
+                                    <span data-animation="fadeInUp" data-delay=".4s">HELLO</span>
+                                    <h1 data-animation="fadeInUp" data-delay=".6s">I AM MAHESH GOVINDU</h1>
+                                    <p data-animation="fadeInUp" data-delay=".8s">WEB DEVELOPER</p>
+                                        <div class="slider-btns">
+                                            <!-- Resume-btn -->
+                                            <a data-animation="fadeInLeft" data-delay="1.0s" href="" class="btn radius-btn">Download</a>
+                                        </div>                              
+                                     </div>
                             </div>
                             <div class="col-lg-6">
                                 <div class="hero__img d-none d-lg-block f-right" data-animation="fadeInRight" data-delay="1s">
